crates/traits/tests/snapshots/snapshots__snapshot_transport_message_welcome.snap
---
source: crates/traits/tests/snapshots.rs
expression: msg
---
{
  "id": [
    187,
    187,
    187,
    187
  ],
  "payload": [
    222,
    173
  ],
  "timestamp": 0,
  "causal_deps": [],
  "source": "nostr",
  "envelope": {
    "Welcome": {
      "recipient": [
        97,
        108,
        105,
        99,
        101
      ]
    }
  }
}
