crates/traits/tests/snapshots/snapshots__stale_already_seen.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::AlreadySeen }"
---
{
  "Stale": {
    "reason": "AlreadySeen"
  }
}
