crates/traits/tests/snapshots/snapshots__stale_beyond_anchor.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::BeyondAnchor }"
---
{
  "Stale": {
    "reason": "BeyondAnchor"
  }
}
