crates/traits/tests/snapshots/snapshots__stale_beyond_app_retention.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::BeyondAppRetention }"
---
{
  "Stale": {
    "reason": "BeyondAppRetention"
  }
}
