crates/traits/tests/snapshots/snapshots__stale_beyond_rollback_horizon.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::BeyondRollbackHorizon }"
---
{
  "Stale": {
    "reason": "BeyondRollbackHorizon"
  }
}
