crates/traits/tests/snapshots/snapshots__stale_invalid_against_canonical_state.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::InvalidAgainstCanonicalState }"
---
{
  "Stale": {
    "reason": "InvalidAgainstCanonicalState"
  }
}
