crates/traits/tests/snapshots/snapshots__stale_losing_branch.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::LosingBranch }"
---
{
  "Stale": {
    "reason": "LosingBranch"
  }
}
