crates/traits/tests/snapshots/snapshots__stale_not_for_this_client.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::NotForThisClient }"
---
{
  "Stale": {
    "reason": "NotForThisClient"
  }
}
