crates/traits/tests/snapshots/snapshots__stale_own_echo.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::OwnEcho }"
---
{
  "Stale": {
    "reason": "OwnEcho"
  }
}
