crates/traits/tests/snapshots/snapshots__stale_peel_failed.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::PeelFailed }"
---
{
  "Stale": {
    "reason": "PeelFailed"
  }
}
