crates/traits/tests/snapshots/snapshots__stale_pre_membership.snap
---
source: crates/traits/tests/snapshots.rs
expression: "IngestOutcome::Stale { reason: StaleReason::PreMembership }"
---
{
  "Stale": {
    "reason": "PreMembership"
  }
}
